# ast-guard-mcp

./: .gitignore  README.md  pyproject.toml
ast_guard_mcp/: __init__.py  server.py
github/workflows/: tests.yml
tests/: test_server.py
