[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-guard-mcp"
version = "1.0.0"
description = "MCP server for ast-guard — deterministic reward hacking detection for LLM-generated Python code."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nick" }
]
keywords = ["mcp", "ast-guard", "reward-hacking", "llm", "static-analysis", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "ast-guard>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Nick-is-building/ast-guard-mcp"
Repository = "https://github.com/Nick-is-building/ast-guard-mcp"
Issues = "https://github.com/Nick-is-building/ast-guard-mcp/issues"

[project.scripts]
ast-guard-mcp = "ast_guard_mcp.server:main"

[tool.setuptools]
packages = ["ast_guard_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
